# Recursor

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml
installers/: Install-Recursor-Linux.sh  Install-Recursor-Mac.command  Install-Recursor-Windows.bat
menubar/: RecursorMenuBar  RecursorMenuBar.swift  com.recursor.menubar.plist
scripts/: chrome_watcher.sh
src/: hooks.rs  main.rs  state.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
